# Engine

./: .gitignore  CMakeLists.txt  build.sh  compileShaders.sh
include/render/: AbstractBuffer.h  AttachmentResources.h  Buffer.h  Camera.h  DepthImage.h  DescriptorManager.h  FrameManager.h  FrameResources.h  FrameSyncObject.h  Image.h  ImageResources.h  MappedBuffer.h  MeshBuffer.h  ModelLoader.h  PhysicalDevice.h  PhysicalDevices.h  Pipeline.h  QueueFamily.h  RenderCore.h  RenderGraph.h  RenderObject.h  RenderObjectData.h  RenderPass.h  RenderSetup.h  RenderSynchronization.h  ResourceManager.h  ShaderManager.h  StagedBuffer.h  Swapchain.h  Texture.h  Vertex.h  VkContext.h  VkRenderer.h  VkUtils.h  Window.h
shaders/: compileShaders.sh  main.frag  main.frag.spv  main.vert  main.vert.spv  test.frag  test.frag.spv  test.vert  test.vert.spv
shaders/sources/: test.frag
source/: main.cpp
source/render/: AttachmentResources.cpp  Buffer.cpp  Camera.cpp  DepthImage.cpp  DescriptorManager.cpp  FrameManager.cpp  FrameResources.cpp  Image.cpp  ImageResources.cpp  MappedBuffer.cpp  MeshBuffer.cpp  PhysicalDevice.cpp  PhysicalDevices.cpp  Pipeline.cpp  QueueFamily.cpp  RenderCore.cpp  RenderGraph.cpp  RenderPass.cpp  RenderSynchronization.cpp  ResourceManager.cpp  StagedBuffer.cpp  Swapchain.cpp  Texture.cpp  VkContext.cpp  VkRenderer.cpp  VkUtils.cpp  Window.cpp
sources/: main.cpp
sources/core/: Utils.cpp
sources/render/: DescriptorManager.cpp  Image.cpp  ImageResources.cpp  MeshBuffer.cpp  ModelLoader.cpp  Pipeline.cpp  QueueFamily.cpp  RenderCore.cpp  ShaderManager.cpp  (+4 more)
